--- a/E-Commerce/package.json
+++ b/E-Commerce/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
