--- a/E-Commerce/package.json
+++ b/E-Commerce/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
