--- a/E-Commerce/package.json
+++ b/E-Commerce/package.json
@@ -20,10 +20,14 @@
     "@splidejs/splide": "^4.1.4",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.7",
+    "i18next": "^23.11.3",
+    "marked": "^12.0.2",
     "react": "^18.2.0",
     "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-icons": "^5.2.0",
+    "react-input-emoji": "^5.9.0",
     "react-router-dom": "^6.23.0",
     "swiper": "^11.1.1"
   },
